lab1/Test/L1-A-10-21.output
Error Type A at Line 7
Error Type A at Line 14
Error Type B at Line 16
Error Type B at Line 18
Error Type A at Line 28
Error Type B at Line 33
Error Type A at Line 47
Error Type A at Line 48
Error Type B at Line 49
