lab1/Test/L1-A-10-21.cmm
float tQF0F2dKsi_AkhL_azS9 
;
int ;
int Qps_8hP8Ks4BpZQ ( int s6074r5mVzp7pueQvY ) {
  cfiDcWxWYO3Q ;
  if ( QBMwhmaEyt1swwWz8vLG ) {
#    int oXsyLN1pHY2vm ;
  }
  if ( oO9ntCADlL )   while ( W2IfakuwztIVh )   C55jnJswF9Km 
    ;

else   return p70vtUIK ;

\}
int ;
int = ;
struct xUjK {
  int orq4UzdHOG2457WG struct ;
  struct R nzZYWl7NZKhGL8 = Q39t = lNF || gnebUBNSjX8McNnTrID 
    && nPmt_gmmTgi != j0dGDqU_05OGEdLF + V3 * L [ CTYWLN7valvlGwPVbn7 
    > v4Ur4Nm1I / fm6Pg5o2KfA6s8TD95 ( mq4Z , o2XdhMkxQMFyU_ 
    || j_YYMIf_5iVxmOG >= g7wBI [ ( GbDc_qziE9kN9t5qzf 
    == Zgb6kBJ ( p2v9CoZikSYgmqeiQ7 , Ijl9OoFenQVxLr < 
    qxWJdny357A_lARg + a5 * ( fnEOReG4clfAhOwYB && ClVDh 
    <= WWN20 ) * - htoo2CxYnXFR0GPPfSbu ) . XKNTX * ! 
    ! ! a9GJwAMEMmn6LiqR ) ] / - 1689905287.421953316 
    . Pfprh4LBScOAWQUeW . N448afTJszvtlMBlCM ) ] . IrS9 
    / cL4 ( ) - - ! 1176472943 ^, WBTa7W9qVWzT [ 1339462555 
    ] ;
};
int auX7X0IndrZsfL ( ) {
}
int lZjofgn0Xh == , KSoHJ8dbNTE_fYD_5 

;
struct {
  struct JEs oBygSeKS4tHoU ;
}BckZV2skGqy27 
;
int ;
int ;
int pNGUlJ_C1o7voPTraSv ( int E1EaexZ11FeuOlk_JU_ 
  , int _GVTmsAJf3i0H3WM ) {
  if ( OZrCdo )   Iq3XC ;
else   if ( epTLWeUj7ig )   UB4Z220V6Hglxtdz ;

`
}@
float int ;
